src/pages/Around/Around.scss
.main-container {

    transform-origin: center bottom;
    transition: transform 2s ease;

    &.zoomed-in {
        /* Additional styles for the zoomed-in view */
    /* Here, you can apply CSS transformations to zoom in and move the content */
    transform-origin: center bottom;
    transition: transform 1.5s ease;
    transform: scale(2); /* Zoom in the content by a factor of 2 (you can adjust the scale factor as needed) */
    }

}

.add-button {
    /* Invisible by default */
    opacity: 0;
    pointer-events: none;

    /* Transition for a smooth fade-in effect */
    transition: opacity 0.3s ease;

    /* Handle visibility when the main container is hovered */
    &.visible {
        opacity: 1;
        pointer-events: all;
    }
}

.new-container {
    /* Invisible by default */
    opacity: 0;
    pointer-events: none;

    &.visible {

        opacity: 1;
        pointer-events: all;
    }
}

